k8s/Projects/yuanpeng.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: yuanpeng-mysql56
  name: mysql56
  namespace: yuanpeng
spec:
  selector:
    matchLabels:
      app: yuanpeng-mysql56
  template:
    metadata:
      labels:
        app: yuanpeng-mysql56
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: yuanpeng
        - name: MYSQL_ROOT_PASSWORD
          value: root
        image: mysql:5.6
        imagePullPolicy: IfNotPresent
        name: mysql56
        ports:
        - containerPort: 3306
          name: mysql56port
          protocol: TCP
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: vol1
      volumes:
      - name: vol1
        persistentVolumeClaim:
          claimName: mysql56

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: yuanpeng-platform
  name: tomcat-platform
  namespace: yuanpeng
spec:
  selector:
    matchLabels:
      app: yuanpeng-platform
  template:
    metadata:
      labels:
        app: yuanpeng-platform
    spec:
      containers:
      - image: harbor.billjc.com/library/tomcat-platform:v1.0
        imagePullPolicy: IfNotPresent
        name: tomcat-platform
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /data
          name: vol1
      - args:
        - nginx
        - -g
        - daemon off;
        - -c
        - /nginx/nginx.conf
        image: nginx:1.19.2
        imagePullPolicy: IfNotPresent
        name: platform-proxy
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /data
          name: vol1
        - mountPath: /nginx
          name: vol2
      volumes:
      - name: vol1
        persistentVolumeClaim:
          claimName: yuanpeng-resources
      - name: vol2
        configMap:
          defaultMode: 256
          name: yuanpeng-nginx-conf
          optional: false

---
apiVersion: v1
kind: Service
metadata:
  name: mysql56
  namespace: yuanpeng
spec:
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: yuanpeng-mysql56
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: platform
  namespace: yuanpeng
spec:
  type: ClusterIP
  selector:
    app: yuanpeng-platform
  ports:
  - name: nginx-proxy
    port: 80
    protocol: TCP
    targetPort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: yuanpeng
  namespace: yuanpeng
spec:
  rules:
  - host: yuanpeng.billjc.com
    http:
      paths:
      - backend:
          serviceName: platform
          servicePort: 80
        path: /
